# yolov8-opencv-onnxruntime-cpp

./: CMakeLists.txt  README.md  main.cpp  main.txt  yolov8_seg.cpp  yolov8_seg.h  yolov8_seg_onnx.cpp  yolov8_seg_onnx.h  yolov8_utils.cpp  yolov8_utils.h
.ipynb_checkpoints/: README-checkpoint.md
include/: yolov8.h  yolov8_onnx.h  yolov8_seg.h  yolov8_seg_onnx.h  yolov8_utils.h
outputs/: 050015_00353.txt  050015_00357.txt  050015_00377.txt  050015_00380.txt  050015_00386.txt  050015_00416.txt  050015_00425.txt  050015_00435.txt  050015_00438.txt  050015_00528.txt  050015_00543.txt  050015_00563.txt  050015_00577.txt  050015_00591.txt  050015_00592.txt  050015_00593.txt  050015_00615.txt  050015_00619.txt  050015_00621.txt  050015_00622.txt  050015_00632.txt  050015_00636.txt  050015_00638.txt  050015_00642.txt  050015_00645.txt  050015_00650.txt  050015_00652.txt  050015_00657.txt  050015_00661.txt  050015_00672.txt  050015_00680.txt  050015_00690.txt  050015_00692.txt  085060_00214.txt  085060_00216.txt  085060_00227.txt  085060_00229.txt  085060_00238.txt  085060_00255.txt  085060_00266.txt  (+19 more)
src/: yolov8_seg.cpp  yolov8_seg_onnx.cpp  yolov8_utils.cpp
